ambassador/tests/001-broader-v0/gold.json
{
  "listeners": [
    
    {
      "address": "tcp://0.0.0.0:443",
      "use_proxy_proto": true,
      "ssl_context": {"private_key_file": "/etc/ambassador-config/certs/tls.key","cert_chain_file": "/etc/ambassador-config/certs/tls.crt","ca_cert_file": "/etc/ambassador-config/ca_cert_chain/tls.crt","require_client_certificate": true
      },"filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {"use_remote_address": true,"codec_type": "auto",
            "stat_prefix": "ingress_http",
            "use_remote_address": true,
            "access_log": [
              {
                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                "path": "/dev/fd/1"
              }
            ],
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],"routes": [
                    
                    {
                      "timeout_ms": 3000,"prefix": "/","headers": [{"name": ":authority", "regex": false, "value": "h.datawire.io"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_precedence_one", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/","headers": [{"name": ":authority", "regex": false, "value": "o.datawire.io"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_precedence_one", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/check_ready","prefix_rewrite": "/ambassador/v0/check_ready","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 10000,"prefix": "/ambassador/v0/check_alive","prefix_rewrite": "/ambassador/v0/check_alive","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_127_0_0_1_8877", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/qotm/quote/","prefix_rewrite": "/quote/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_qotm", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    {
                      "timeout_ms": 50,"prefix": "/redirect2/","host_redirect": "httpbin.org"




                    }
                    ,
                    {
                      "timeout_ms": 50,"prefix": "/redirect/","host_redirect": "httpbin.org",
                         "path_redirect": "/ip/"
                      

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/service/","prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_qotm", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 50,"prefix": "/httpbin/","prefix_rewrite": "/","host_rewrite": "httpbin.org","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_wtfo___httpbin_org", "weight": 100.0 }
                                  
                              ]
                          },
                          "shadow": {
                            "cluster": "cluster_shadow_https___myservice_org__otls_hr_httpbin_org"
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/tspace/","prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_qotm_tspace", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/google/","prefix_rewrite": "/","host_rewrite": "google.com","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_https___google_com_otls_hr_google_com", "weight": 100.0 }
                                  
                              ]
                          }

                      
                        ,
                        "request_headers_to_add": [{"key": "test", "value": "%PROTOCOL%"}, {"key": "test-2", "value": "testing"}]
                        
                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/slack/","use_websocket": true,"prefix_rewrite": "/","cluster": "cluster_slack_com"

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/long/","headers": [{"name": "foo", "regex": true, "value": "^bar\\.example\\.com$"}, {"name": ":authority", "regex": true, "value": "^bar\\.example\\.com$"}, {"name": ":method", "regex": false, "value": "GET"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_really_really_really_long_no_i_m-0", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/long/","headers": [{"name": ":authority", "regex": true, "value": "^bar\\.example\\.com$"}, {"name": ":method", "regex": false, "value": "PUT"}],"prefix_rewrite": "/qotm/quote/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_really_really_really_long_no_i_m-1", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/long/","headers": [{"name": ":method", "regex": false, "value": "DELETE"}],"prefix_rewrite": "/qotm/quote/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_really_really_really_long_no_i_m-1", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/evil/","headers": [{"name": ":method", "regex": false, "value": "PUT"}],"prefix_rewrite": "/qotm/quote/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_http___qotm", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/evil/","headers": [{"name": ":method", "regex": false, "value": "GET"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_qotm", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/qotm/","prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_qotm", "weight": 100.0 }
                                  
                              ]
                          },
                          "shadow": {
                            "cluster": "cluster_shadow_httpbin_org"
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/grpc/","prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_192_168_0_1_45", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/","headers": [{"name": ":authority", "regex": false, "value": "z.datawire.io"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_precedence_zero", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    ,
                    
                    {
                      "timeout_ms": 3000,"prefix": "/","headers": [{"name": ":authority", "regex": false, "value": "n.datawire.io"}],"prefix_rewrite": "/","weighted_clusters": {
                              "clusters": [
                                  
                                    { "name": "cluster_precedence_none", "weight": 100.0 }
                                  
                              ]
                          }

                      
                    }
                    
                    
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "grpc_http1_bridge",
                "config": {}
              },
              {
                "name": "lua_scripts",
                "config": {"inline_code": "function envoy_on_request(request_handle)\n  request_handle:headers():add(\"\", \"\")\nend\nfunction envoy_on_response(response_handle)\n  response_handle:headers():add(\"\", \"\")\nend\n"}
              },
              {"type": "decoder",
                "name": "extauth",
                "config": {"allowed_headers": ["x-qotm-session"], "cluster": "cluster_extauth_http___canary_auth_3000", "path_prefix": "/extauth", "timeout_ms": 5000}
              },{
                "name": "cors",
                "config": {}
              },{"type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "address": "tcp://127.0.0.1:8001",
    "access_log_path": "/tmp/admin_access_log"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "cluster_127_0_0_1_8877",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8877"
          }
          
        ]},
      {
        "name": "cluster_192_168_0_1_45",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin","features": "http2",        
        "hosts": [
          {
            "url": "tcp://192.168.0.1:45"
          }
          
        ]},
      {
        "name": "cluster_extauth_http___canary_auth_3000",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://canary-auth:3000"
          },
          {
            "url": "tcp://example-auth:3000"
          }
          
        ]},
      {
        "name": "cluster_http___qotm",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://qotm:80"
          }
          
        ]},
      {
        "name": "cluster_https___google_com_otls_hr_google_com",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://google.com:443"
          }
          
        ],
        "ssl_context": {
          
          "sni": "google.com"
          
        }},
      {
        "name": "cluster_precedence_none",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://precedence_none:80"
          }
          
        ]},
      {
        "name": "cluster_precedence_one",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://precedence_one:80"
          }
          
        ]},
      {
        "name": "cluster_precedence_zero",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://precedence_zero:80"
          }
          
        ]},
      {
        "name": "cluster_qotm",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://qotm:80"
          }
          
        ]},
      {
        "name": "cluster_qotm_tspace",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://qotm.tspace:80"
          }
          
        ]},
      {
        "name": "cluster_really_really_really_long_no_i_m-0",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://really-really-really-long-no-i-mean-really-really-really-really-long-service:80"
          }
          
        ]},
      {
        "name": "cluster_really_really_really_long_no_i_m-1",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://really-really-really-long-no-i-mean-really-really-really-really-long-service-two:80"
          }
          
        ]},
      {
        "name": "cluster_shadow_httpbin_org",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://httpbin.org:80"
          }
          
        ]},
      {
        "name": "cluster_shadow_https___myservice_org__otls_hr_httpbin_org",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://myservice.org:443"
          }
          
        ],
        "ssl_context": {
          
          "sni": "httpbin.org"
          
        }},
      {
        "name": "cluster_slack_com",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",        
        "hosts": [
          {
            "url": "tcp://slack.com:80"
          }
          
        ]},
      {
        "name": "cluster_wtfo___httpbin_org",
        "connect_timeout_ms": 3000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://httpbin.org:80"
          }

        ]}
    ]
  },
  
  "statsd_udp_ip_address": "127.0.0.1:8125",
  "stats_flush_interval_ms": 1000
}
